--- a/thingyJS.htm
+++ b/thingyJS.htm
@@ -605,8 +605,8 @@ var thingyData = [
 
         For console.log use log()
 	
-	TODO:
-		<$script> or [script]? | [js] or [tscript]?
+	TODO: 
+        <$script> or [script]? | [js] or [tscript]?
 		Limit number of recursive self calling thingies to 500 or ban them
 		Add math formulas
 		Make the save function its own function
@@ -614,6 +614,7 @@ var thingyData = [
 		
     */
 
+// TODO: This is a comment.
 
 
 
